# openvino

./: .gitmodules
cmake/: dependencies.cmake  features.cmake
cmake/templates/: OpenVINOConfig.cmake.in
docs/template_plugin/backend/: evaluates_map.cpp  opset_int_tbl.hpp
docs/template_plugin/tests/functional/: CMakeLists.txt
inference-engine/src/mkldnn_plugin/: CMakeLists.txt  mkldnn_graph.cpp  xsimd.h
inference-engine/src/mkldnn_plugin/nodes/: matrix_nms.cpp  mkldnn_adaptive_pooling.cpp  mkldnn_adaptive_pooling.h  mkldnn_eltwise_node.cpp  mkldnn_eltwise_node.h  mkldnn_matrix_nms_node.cpp  mkldnn_matrix_nms_node.h
inference-engine/src/mkldnn_plugin/nodes/opt/: CMakeLists.txt  adaptive_pooling_private.h  adaptive_pooling_public.h  adaptive_pooling_wrapper.cpp  eltwise_private.h  eltwise_public.h  eltwise_wrapper.cpp  fuse_private.cpp  fuse_private.h  fuse_public.h  mkldnn_adaptive_pooling_opt.cpp  mkldnn_adaptive_pooling_opt.h  mkldnn_adaptive_pooling_opt_common.h  xsimd.h
inference-engine/src/mkldnn_plugin/nodes/opt/avx2/: adaptive_pooling_avx2.cpp  eltwise_avx2.cpp  fuse_avx2.cpp  mkldnn_adaptive_pooling_opt_avx2.cpp
inference-engine/src/mkldnn_plugin/nodes/opt/avx512/: adaptive_pooling_avx512.cpp  eltwise_avx512.cpp  fuse_avx512.cpp  mkldnn_adaptive_pooling_opt_avx512.cpp
inference-engine/src/mkldnn_plugin/nodes/opt/sse42/: adaptive_pooling_sse4.2.cpp  eltwise_sse4.2.cpp  fuse_sse42.cpp  mkldnn_adaptive_pooling_opt_sse4.2.cpp
inference-engine/src/mkldnn_plugin/nodes/opt_test/: CMakeLists.txt
inference-engine/src/transformations/include/ngraph_ops/: matrix_nms_ie_internal.hpp
inference-engine/tests/unit/cpu/: CMakeLists.txt
ngraph/core/include/ngraph/: ops.hpp
ngraph/core/include/ngraph/op/: matrix_nms.hpp  multiclass_nms.hpp
ngraph/core/src/op/: matrix_nms.cpp  multiclass_nms.cpp
ngraph/frontend/paddlepaddle/src/: decoder.cpp  decoder.hpp  node_context.hpp  op_table.cpp
ngraph/frontend/paddlepaddle/src/op/: argmax.cpp  argmax.hpp  assign_value.cpp  clip.cpp  clip.hpp  conv2d.cpp  conv2d_transpose.cpp  dropout.cpp  equal.cpp  equal.hpp  expand_v2.cpp  expand_v2.hpp  fill_constant.cpp  fill_constant_batch_size_like.cpp  flatten_contiguous_range.cpp  greater_equal.cpp  greater_equal.hpp  hard_sigmoid.cpp  hard_sigmoid.hpp  hard_swish.cpp  hard_swish.hpp  interp.cpp  interp.hpp  log.cpp  log.hpp  logical_not.cpp  logical_not.hpp  lstm.cpp  pool2d.cpp  pool2d.hpp  pow.cpp  pow.hpp  range.cpp  range.hpp  relu6.cpp  relu6.hpp  reshape2.cpp  reshape2.hpp  scale.cpp  shape.cpp  (+9 more)
ngraph/test/: CMakeLists.txt
ngraph/test/backend/: matrix_nms.in.cpp
ngraph/test/files/paddlepaddle/gen_scripts/: generate_concat.py  generate_conv2d_transpose.py  generate_equal.py  generate_expand_v2.py  generate_fill_constant_batch_size_like.py  generate_ir.py  generate_logical_not.py  generate_pool2d.py  generate_pow.py  generate_range.py  generate_reshape.py  generate_shape.py  generate_slice.py  generate_split.py  generate_unsqueeze.py  save_model.py  verify_pdmodel.py
ngraph/test/files/paddlepaddle/models/: models.csv
ngraph/test/frontend/paddlepaddle/: basic_api.cpp  op.cpp
ngraph/test/frontend/paddlepaddle/op/: concat.cpp  conv2d_transpose.cpp
ngraph/test/runtime/ie/: unit_test.manifest
ngraph/test/runtime/interpreter/: evaluates_map.cpp
samples/cpp/benchmark_app/: main.cpp
src/bindings/python/: constraints.txt
src/cmake/: ov_parallel.cmake
src/core/dev_api/openvino/op/: mha.hpp
src/core/include/ngraph/: ops.hpp
src/core/include/ngraph/op/: add_custom.hpp  gpt_attn.hpp  gpt_neox_attn.hpp  mvn_custom.hpp
src/core/include/openvino/core/: parallel.hpp
src/core/include/openvino/op/: add_custom.hpp  gpt_attn.hpp  gpt_neox_attn.hpp  if.hpp  mvn_custom.hpp  ops.hpp
src/core/include/openvino/opsets/: opset10_tbl.hpp
src/core/shape_inference/include/: scaled_dot_product_attention_shape_inference.hpp
src/core/src/op/: add_custom.cpp  gpt_attn.cpp  gpt_neox_attn.cpp  if.cpp  loop.cpp  mha.cpp  mvn_custom.cpp  scaled_dot_product_attention.cpp
src/core/tests/: CMakeLists.txt
src/core/tests/engines_util/: ie_engines.hpp
src/core/tests/frontend/paddle/: op_fuzzy.cpp
src/core/tests/frontend/paddlepaddle/: op_fuzzy.cpp
src/core/tests/op_eval/: loop.cpp
src/core/tests/type_prop/: loop.cpp
src/frontends/paddle/src/: decoder_proto.cpp  decoder_proto.hpp  frontend.cpp  input_model.cpp  input_model.hpp  op_table.cpp
src/frontends/paddle/src/op/: assign.cpp  conditional_block.cpp  elementwise_ops.cpp  expand_v2.cpp  lod_array_length.cpp  logical_and.cpp  meshgrid.cpp  multiclass_nms.cpp  select_input.cpp  slice.cpp  stack.cpp  tensor_array_to_tensor.cpp  while.cpp  write_to_array.cpp
src/frontends/paddlepaddle/include/paddlepaddle_frontend/: frontend.hpp  model.hpp  place.hpp
src/frontends/paddlepaddle/src/: decoder.cpp  decoder.hpp  frontend.cpp  model.cpp  node_context.hpp  op_table.cpp
src/frontends/paddlepaddle/src/op/: assign.cpp  conditional_block.cpp  elementwise_ops.cpp  lod_array_length.cpp  meshgrid.cpp  scale.cpp  select_input.cpp  slice.cpp  tensor_array_to_tensor.cpp  while.cpp  write_to_array.cpp
src/frontends/pytorch/src/: frontend.cpp
src/inference/dev_api/: performance_heuristics.hpp
src/plugins/intel_cpu/: CMakeLists.txt
src/plugins/intel_cpu/src/: config.cpp  cpu_memory.cpp  cpu_types.cpp  cpu_types.h  dnnl_extension_utils.cpp  edge.cpp  exec_network.cpp  extension.cpp  graph.cpp  graph.h  graph_advisor.cpp  graph_advisor.h  graph_dumper.cpp  graph_dumper.h  graph_optimizer.cpp  graph_optimizer.h  infer_request.cpp  memory_state.cpp  mkldnn_node.cpp  mkldnn_nodes_factory.cpp  node.cpp  node.h  nodes_factory.cpp  perf_count.h  plugin.cpp
src/plugins/intel_cpu/src/emitters/: cpu_generator.cpp
src/plugins/intel_cpu/src/memory_desc/: dnnl_blocked_memory_desc.cpp  dnnl_blocked_memory_desc.h  dnnl_memory_desc.h
src/plugins/intel_cpu/src/nodes/: add_custom.cpp  concat.cpp  (+48 more)
tests/: constraints.txt
tests/e2e_tests/: requirements.txt
tools/gpt/: gen_chatglm.py  gpt_neox_ov.py  gpt_neox_ov_test.py  test_chatglm.py
(+221 files in other folders)
